--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,14 @@
 [build-system]
-requires = ["setuptools", "setuptools_dso>=1.3a1", "wheel", "numpy", "Cython>=0.20", "epicscorelibs>=7.0.3.99.2.0a1", "pvxslibs"]
+requires = [
+    "setuptools",
+    "setuptools_dso>=2.7a1,<=2.10; python_version<='3.11'",
+    "setuptools_dso>=2.11a2; python_version>='3.12'",
+    "wheel",
+    "numpy",
+    "numpy>=2.0.1; python_version>='3.10'",
+    "Cython>=0.20",
+    "epicscorelibs==7.0.7.99.0.2; python_version<='3.11'",
+    "epicscorelibs>=7.0.7.99.1.1a2; python_version>='3.12'",
+    "pvxslibs==1.3.1; python_version<='3.11'",
+    "pvxslibs>=1.3.2a1; python_version>='3.12'",
+]
