--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,104 +47,57 @@ jobs:
             source: true
 
           # Linux py builds x64
-          # TODO: manylinux1 and 2014 are EOL, even more reason to remove these supported versions
-          - name: linux 2.7 amd64
-            os: ubuntu-latest
-            pyver: cp27-cp27m
-            piparch: manylinux1_x86_64
-            numpy: numpy==1.8.2
-            cython: Cython==0.29.2
-
-          - name: linux 2.7u amd64
-            os: ubuntu-latest
-            pyver: cp27-cp27mu
-            piparch: manylinux1_x86_64
-            numpy: numpy==1.8.2
-            cython: Cython==0.29.2
-
-          - name: linux 3.5 amd64
-            os: ubuntu-latest
-            pyver: cp35-cp35m
-            piparch: manylinux1_x86_64
-            numpy: numpy==1.12.1
-            cython: Cython==0.29.2
-
           - name: linux 3.6 amd64
             os: ubuntu-latest
             pyver: cp36-cp36m
-            piparch: manylinux1_x86_64
+            piparch: manylinux_2_28_x86_64
             numpy: numpy==1.12.1
             cython: Cython==0.29.2
 
           - name: linux 3.7 amd64
             os: ubuntu-latest
             pyver: cp37-cp37m
-            piparch: manylinux1_x86_64
+            piparch: manylinux_2_28_x86_64
             numpy: numpy==1.16.2
             cython: Cython==0.29.2
 
           - name: linux 3.8 amd64
             os: ubuntu-latest
             pyver: cp38-cp38
-            piparch: manylinux1_x86_64
+            piparch: manylinux_2_28_x86_64
             numpy: numpy==1.17.3
             cython: Cython==0.29.2
 
           - name: linux 3.9 amd64
             os: ubuntu-latest
             pyver: cp39-cp39
-            piparch: manylinux2010_x86_64
+            piparch: manylinux_2_28_x86_64
             numpy: numpy==1.19.3
             cython: Cython==0.29.23
 
           - name: linux 3.10 amd64
             os: ubuntu-latest
             pyver: cp310-cp310
-            piparch: manylinux2014_x86_64
+            piparch: manylinux_2_28_x86_64
             numpy: numpy==2.0.1
             cython: Cython==3.0.10
 
           - name: linux 3.11 amd64
             os: ubuntu-latest
             pyver: cp311-cp311
-            piparch: manylinux2014_x86_64
+            piparch: manylinux_2_28_x86_64
             numpy: numpy==2.0.1
             cython: Cython==3.0.10
 
           - name: linux 3.12 amd64
             os: ubuntu-latest
             pyver: cp312-cp312
-            piparch: manylinux2014_x86_64
+            piparch: manylinux_2_28_x86_64
             numpy: numpy==2.0.1
             cython: Cython==3.0.10
             skip_cothread: yes
 
           # Linux py builds x64
-          # TODO: manylinux1 and 2014 are EOL, even more reason to remove these supported versions
-          - name: linux 2.7 i686
-            os: ubuntu-latest
-            pyver: cp27-cp27m
-            piparch: manylinux1_i686
-            numpy: numpy==1.11.1
-            cython: Cython==0.29.2
-            pre: linux32
-
-          - name: linux 2.7u i686
-            os: ubuntu-latest
-            pyver: cp27-cp27mu
-            piparch: manylinux1_i686
-            numpy: numpy==1.11.1
-            cython: Cython==0.29.2
-            pre: linux32
-
-          - name: linux 3.5 i686
-            os: ubuntu-latest
-            pyver: cp35-cp35m
-            piparch: manylinux1_i686
-            numpy: numpy==1.12.1
-            cython: Cython==0.29.2
-            pre: linux32
-
           - name: linux 3.6 i686
             os: ubuntu-latest
             pyver: cp36-cp36m
@@ -174,7 +127,7 @@ jobs:
           - name: linux 3.9 i686
             os: ubuntu-latest
             pyver: cp39-cp39
-            piparch: manylinux2010_i686
+            piparch: manylinux2014_i686
             numpy: numpy==1.19.5
             cython: Cython==0.29.23
             pre: linux32
@@ -244,13 +197,6 @@ jobs:
           #  python: "3.12"
           #  piparch: win_amd64
 
-          - name: win64 3.5
-            os: windows-2019
-            python: "3.5"
-            piparch: win_amd64
-            profile: latest
-            skip_cothread: yes
-
           - name: win64 3.6
             os: windows-latest
             python: "3.6"
@@ -311,12 +257,6 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
           #architecture: x64
-
-      # TLS 1.0 and 1.1 support was removed from pypi so the cached pip won't work
-      - name: Python 3.5 Fix
-        if: ${{ matrix.python == '3.5' }}
-        run: |
-          curl https://bootstrap.pypa.io/pip/3.5/get-pip.py | python
 
       - name: Automatic core dumper analysis
         uses: mdavidsaver/ci-core-dumper@master
